--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
             background-color: rgba(0, 0, 0, 0.8);
             color: white;
             text-align: center;
-            padding: 10px;
+            padding: 5px;
             font-family: Arial, sans-serif;
+            font-size: 12px;
             z-index: 2000;
-            display: none;
         }
     </style>
 </head>
 <body>
-    <div id="mensagem-rotacao">Por favor, gire seu dispositivo para a horizontal para uma melhor visualização.</div>
+    <div id="mensagem-rotacao">Caso esteja no celular, vire na horizontal para cenário completo</div>
     <a href="https://netheriosa.github.io/intro-usina/" class="botao-voltar" title="Voltar"></a>
     <model-viewer
         id="modelo3d"
@@ -98,24 +98,11 @@
     <script>
         const modelViewer = document.getElementById('modelo3d');
         const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
-        const mensagemRotacao = document.getElementById('mensagem-rotacao');
-
-        function verificarOrientacao() {
-            if (isMobile && window.innerHeight > window.innerWidth) {
-                mensagemRotacao.style.display = 'block';
-            } else {
-                mensagemRotacao.style.display = 'none';
-            }
-        }
 
         if (isMobile) {
-            window.addEventListener('orientationchange', verificarOrientacao);
-            window.addEventListener('resize', verificarOrientacao);
-            verificarOrientacao();
-
             modelViewer.setAttribute('camera-orbit', '0deg 90deg 19m');
-            modelViewer.setAttribute('min-camera-orbit', 'auto 90deg 4m');
-            modelViewer.setAttribute('max-camera-orbit', 'auto 90deg 19m');
+            modelViewer.setAttribute('min-camera-orbit', 'auto 90deg auto');
+            modelViewer.setAttribute('max-camera-orbit', 'auto 90deg auto');
             modelViewer.setAttribute('field-of-view', '180deg');
         } else {
             modelViewer.setAttribute('camera-orbit', '0deg 90deg 14m');
