--- a/index.html
+++ b/index.html
@@ -64,23 +64,24 @@
                 font-size: 16px;
             }
         }
-        #mensagem-rotacao {
+        .mensagem-mobile {
             position: fixed;
             top: 0;
             left: 0;
             right: 0;
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: rgba(0, 0, 0, 0.7);
             color: white;
             text-align: center;
-            padding: 5px;
+            padding: 10px;
             font-family: Arial, sans-serif;
-            font-size: 12px;
-            z-index: 2000;
+            font-size: 16px;
+            z-index: 1001;
+            display: none;
         }
     </style>
 </head>
 <body>
-    <div id="mensagem-rotacao">Caso esteja no celular, vire na horizontal para cenário completo</div>
+    <div class="mensagem-mobile">Caso esteja no celular, vire a tela para cenário completo</div>
     <a href="https://netheriosa.github.io/intro-usina/" class="botao-voltar" title="Voltar"></a>
     <model-viewer
         id="modelo3d"
@@ -98,18 +99,30 @@
     <script>
         const modelViewer = document.getElementById('modelo3d');
         const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+        const mensagemMobile = document.querySelector('.mensagem-mobile');
 
-        if (isMobile) {
-            modelViewer.setAttribute('camera-orbit', '0deg 90deg 19m');
-            modelViewer.setAttribute('min-camera-orbit', 'auto 90deg auto');
-            modelViewer.setAttribute('max-camera-orbit', 'auto 90deg auto');
-            modelViewer.setAttribute('field-of-view', '180deg');
-        } else {
-            modelViewer.setAttribute('camera-orbit', '0deg 90deg 14m');
-            modelViewer.setAttribute('min-camera-orbit', 'auto 90deg 4m');
-            modelViewer.setAttribute('max-camera-orbit', 'auto 90deg 14m');
-            modelViewer.setAttribute('field-of-view', '180deg');
+        function ajustarVisualizacao() {
+            if (isMobile) {
+                modelViewer.setAttribute('camera-orbit', 'auto 90deg 14m');
+                modelViewer.setAttribute('min-camera-orbit', 'auto 90deg 4m');
+                modelViewer.setAttribute('max-camera-orbit', 'auto 90deg 14m');
+                modelViewer.setAttribute('field-of-view', '180deg');
+                
+                if (window.innerHeight > window.innerWidth) {
+                    mensagemMobile.style.display = 'block';
+                } else {
+                    mensagemMobile.style.display = 'none';
+                }
+            } else {
+                modelViewer.setAttribute('camera-orbit', '0deg 90deg 14m');
+                modelViewer.setAttribute('min-camera-orbit', 'auto 90deg 4m');
+                modelViewer.setAttribute('max-camera-orbit', 'auto 90deg 14m');
+                modelViewer.setAttribute('field-of-view', '180deg');
+            }
         }
+
+        ajustarVisualizacao();
+        window.addEventListener('resize', ajustarVisualizacao);
 
         modelViewer.setAttribute('disable-pan', 'true');
         modelViewer.setAttribute('interaction-prompt', 'none');
